# macros

./: Cargo.toml  Makefile  cliff.toml  deny.toml
examples/: auto_deref.rs  consume_fields.rs  my_ready.rs  my_vec.rs  state_machine.rs
src/: enum_from.rs  lib.rs
