[package]
name = "macros"                          # enter your project name
version = "0.1.0"
edition = "2021"
authors = ["Noah <upupqi.cs@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
darling = "^0.20.10"
proc-macro2 = "^1.0.86"
quote = "^1.0.36"
syn = { version = "^2.0.72", features = ["extra-traits"] }
tracing = "^0.1.40"
tracing-subscriber = "^0.3.18"

[dev-dependencies]
anyhow = "^1.0"
tokio = { version = "1.39.2", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
] }
